# flash-modernbert

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  __init__.py  attn_backend_micro.py  bshd_rope_bench.py  encode_transparency.py  fit_packed_attention_dispatch.py  inference_bench.py  iso_loss.py  max_batch_bench.py  packed_attention_dispatch_bench.py  packed_graph_boundary_bench.py  packed_short_attention_bench.py  pylate_trainer.py  train_bench.py  varlen_bench.py  varlen_train_bench.py
benchmarks/configs/: agent_modern_colbert.yml  index_5090_b128.yml  inference_5090.yml  inference_indexing.yml  inference_indexing_fa.yml  inference_short.yml  inference_short_fa.yml  max_batch.yml  msmarco.yml  msmarco_trainer.yml  st_trainer.yml  synthetic_quick.yml  synthetic_showcase.yml  train_graph_short.yml  train_graph_shortS.yml  train_no_graph_short.yml  train_short.yml  training_b200_late_interaction_sampled.yml
benchmarks/docs/: indexing.md  inference.md  training.md
benchmarks/helpers/: __init__.py  common.py  packed_collator.py  packed_index.py  packed_training.py
benchmarks/scripts/: modal_b200_sandbox.py  modal_packed_attention_dispatch.py
benchmarks/showcases/: __init__.py  indexing.py  inference.py  mixed_serving.py  training.py
docs/: index_showcase.md  inference_showcase.md  training_showcase.md
flash_modernbert/: __init__.py  config.py  errors.py  forward.py  graph.py  locate.py  ops.py  prepare.py  state.py  train_graph.py  validate.py
flash_modernbert/_kernels/: __init__.py  _compile_cache.py  geglu.py  layer_norm.py  ln_bwd_inplace.py  matmul.py  rope.py  triton_layer_norm.py
packed_encoders/: __init__.py  attention_dispatch.py  config.py  errors.py  forward.py  graph.py  locate.py  ops.py  pack.py  state.py  train_graph.py  validate.py
packed_encoders/_kernels/: _compile_cache.py  geglu.py  layer_norm.py  ln_bwd_inplace.py  matmul.py  rope.py  triton_layer_norm.py  triton_packed_attention.py
scripts/: modal_b200_sandbox.py  modal_packed_attention_dispatch_bench.py
showcase/: _common.py  flash_maxsim_packed.py  index_showcase.py  inference_showcase.py  mixed_serving_showcase.py  packed_collator.py  packed_index.py  packed_training.py  training_showcase.py
showcase/configs/: index_5090_b128.yml  inference_5090.yml  training_b200_single_vector.yml
tests/: test_attention_backend.py  test_attention_dispatch_score.py  test_graph_bucketing.py  test_matmul.py  test_packed_short_attention.py  test_residual_layer_norm.py  test_train_graph.py  test_varlen.py
