[project]
name = "flash-modernbert"
version = "0.1.0"
description = "Fused-tail CuteDSL encoder for ModernBERT / mmBERT — monkeypatches Hugging Face, SentenceTransformers, and PyLate in place."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.7",
    "transformers>=4.45",
    "nvidia-cutlass-dsl>=4.5.2",
    "numpy",
]

[project.optional-dependencies]
# Frameworks the package patches. Installed by consumers, not required to import.
sentence-transformers = ["sentence-transformers>=3.0"]
pylate = ["pylate>=1.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flash_modernbert"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[dependency-groups]
dev = [
    "pytest>=8.0",
]
