[project]
name = "packed-encoders"
version = "0.1.0"
description = "Fused-tail CuteDSL encoder for ModernBERT / mmBERT — monkeypatches Hugging Face, SentenceTransformers, and PyLate in place."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE" }
dependencies = [
    # Python 3.14 starts at torch 2.9 because torch 2.8 has no cp314 wheels.
    "torch>=2.8,<2.9; python_version < '3.14'",
    "torch>=2.9,<2.10; python_version >= '3.14'",
    # CPU torch omits Triton, which the in-tree kernels import directly.
    "triton>=3.4,<3.5; python_version < '3.14'",
    "triton>=3.5,<3.6; python_version >= '3.14'",
    "transformers>=4.45",
    "nvidia-cutlass-dsl>=4.5.2,<4.6",
]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=3.0"]
pylate = ["pylate>=1.5"]
fa2 = ["flash-attn"]
fa4 = ["flash-attn-4==4.0.0b16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packed_encoders"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
# Prebuilt FA2 for the measured torch 2.8 / cp311 / sm_120 environment.
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3.post1/flash_attn-2.8.3.post1+cu12torch2.8cxx11abiTRUE-cp311-cp311-linux_x86_64.whl" }
flash-maxsim = { git = "https://github.com/roipony/flash-maxsim", rev = "e9ff072" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "numpy",
    "scipy",
    "datasets",
    "matplotlib",
    "pyyaml",
    "flash-maxsim",
]
